--- a/package.json
+++ b/package.json
@@ -12,7 +12,43 @@
   "commands": [
     {
       "name": "index",
-      "title": "Obsidian Page Create",
+      "title": "Obsidian - Create Page",
+      "description": "Template for submitting a form",
+      "mode": "view",
+      "icon": "icon-obisidan-create.png"
+    },
+    {
+      "name": "feishu",
+      "title": "Feishu - Create Page",
+      "description": "Template for submitting a form",
+      "mode": "view",
+      "icon": "icon-feishu-create.png"
+    },
+    {
+      "name": "feishu_search",
+      "title": "Feishu - Search Page",
+      "description": "Template for submitting a form",
+      "mode": "view",
+      "icon": "icon-feishu-search.png"
+    },
+    {
+      "icon": "icon-obsidian-tips.png",
+      "name": "obsidian-tips",
+      "title": "Obsidian - Journal Tips",
+      "description": "Template for submitting a form",
+      "mode": "view"
+    },
+    {
+      "icon": "icon-obsidian-money.png",
+      "name": "obsidian-money",
+      "title": "Obsidian - Journal Money",
+      "description": "Template for submitting a form",
+      "mode": "view"
+    },
+    {
+      "icon": "icon-obsidian-mood.png",
+      "name": "obsidian-mood",
+      "title": "Obsidian - Journal Mood",
       "description": "Template for submitting a form",
       "mode": "view"
     }
@@ -20,11 +56,13 @@
   "dependencies": {
     "@raycast/api": "^1.45.2",
     "keychain": "^1.3.0",
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.40",
     "request": "^2.88.2",
     "sqlite3": "https://github.com/tryghost/node-sqlite3/tarball/master"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.8.3",
     "@types/react": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
